--- a/Covid-dataset-2.ipynb
+++ b/Covid-dataset-2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "76ccf452",
+   "id": "0dc159ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "82376710",
+   "id": "456401b1",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e0601b89",
+   "id": "ecf96fe4",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "89d2fc7e",
+   "id": "6d280787",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "89bf0d64",
+   "id": "a8b11438",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "abdba44a",
+   "id": "7d1906fc",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4e50a74c",
+   "id": "5cc093a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1807d811",
+   "id": "b16664f2",
    "metadata": {},
    "outputs": [
     {
@@ -741,34 +741,443 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c27ead09",
+   "id": "0d6c0259",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all().",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_14952\\3974407947.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcovid_df\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mcovid_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"PREGNANT\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'1'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_14952\\3974407947.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcovid_df\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mcovid_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"PREGNANT\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'1'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__nonzero__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1536\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__nonzero__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1537\u001b[0m         raise ValueError(\n\u001b[1;32m-> 1538\u001b[1;33m             \u001b[1;34mf\"The truth value of a {type(self).__name__} is ambiguous. \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1539\u001b[0m             \u001b[1;34m\"Use a.empty, a.bool(), a.item(), a.any() or a.all().\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1540\u001b[0m         )\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of a Series is ambiguous. Use a.empty, a.bool(), a.item(), a.any() or a.all()."
+     "data": {
+      "text/plain": [
+       "SEX                int64\n",
+       "DATE_DIED         object\n",
+       "PNEUMONIA          int64\n",
+       "AGE                int64\n",
+       "PREGNANT           int64\n",
+       "DIABETES           int64\n",
+       "COPD               int64\n",
+       "ASTHMA             int64\n",
+       "INMSUPR            int64\n",
+       "HIPERTENSION       int64\n",
+       "CARDIOVASCULAR     int64\n",
+       "OBESITY            int64\n",
+       "RENAL_CHRONIC      int64\n",
+       "TOBACCO            int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "covid_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "c2f11b42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PNEUMONIA</th>\n",
+       "      <th>PREGNANT</th>\n",
+       "      <th>DIABETES</th>\n",
+       "      <th>COPD</th>\n",
+       "      <th>ASTHMA</th>\n",
+       "      <th>INMSUPR</th>\n",
+       "      <th>HIPERTENSION</th>\n",
+       "      <th>CARDIOVASCULAR</th>\n",
+       "      <th>OBESITY</th>\n",
+       "      <th>RENAL_CHRONIC</th>\n",
+       "      <th>TOBACCO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>330</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>334</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1047628</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1047629</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1047632</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1047634</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1047637</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>27029 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         PNEUMONIA  PREGNANT  DIABETES  COPD  ASTHMA  INMSUPR  HIPERTENSION  \\\n",
+       "0                1         2         2     2       2        2             1   \n",
+       "3                2         2         2     2       2        2             2   \n",
+       "153              2         2         2     2       2        2             2   \n",
+       "330              2         2         2     2       2        2             2   \n",
+       "334              2         2         2     2       2        2             2   \n",
+       "...            ...       ...       ...   ...     ...      ...           ...   \n",
+       "1047628          2         2         2     2       2        2             2   \n",
+       "1047629          1         2         1     2       2        2             1   \n",
+       "1047632          1         2         2     2       2        2             1   \n",
+       "1047634          2         2         2     2       2        2             1   \n",
+       "1047637          1         2         2     2       2        2             2   \n",
+       "\n",
+       "         CARDIOVASCULAR  OBESITY  RENAL_CHRONIC  TOBACCO  \n",
+       "0                     2        2              2        2  \n",
+       "3                     2        2              2        2  \n",
+       "153                   2        2              2        2  \n",
+       "330                   2        2              1        2  \n",
+       "334                   2        2              2        2  \n",
+       "...                 ...      ...            ...      ...  \n",
+       "1047628               2        2              2        2  \n",
+       "1047629               2        1              2        2  \n",
+       "1047632               2        2              2        2  \n",
+       "1047634               2        2              2        2  \n",
+       "1047637               2        2              2        2  \n",
+       "\n",
+       "[27029 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Covid_Disease_df = pd.DataFrame(covid_df, columns =['PNEUMONIA','PREGNANT','DIABETES','COPD','ASTHMA','INMSUPR',\n",
+    "                            'HIPERTENSION','CARDIOVASCULAR','OBESITY','RENAL_CHRONIC',\n",
+    "                            'TOBACCO'])\n",
+    "Covid_Disease_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "336b593e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of people who died from Covid AND had pneumonia:  18930\n"
      ]
     }
    ],
    "source": [
-    "len([x for x in covid_df if covid_df[\"PREGNANT\"] == '1'])"
+    "Pneumonia = np.sum(covid_df['PNEUMONIA'] == 1)\n",
+    "print(\"The number of people who died from Covid AND had pneumonia: \", Pneumonia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "67e2601a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of people who died from Covid AND was pregnant:  89\n"
+     ]
+    }
+   ],
+   "source": [
+    "Pregnant = np.sum(covid_df['PREGNANT'] == 1)\n",
+    "print(\"The number of people who died from Covid AND was pregnant: \", Pregnant)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b33cefba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of people who died from Covid AND had diabetes:  11399\n"
+     ]
+    }
+   ],
+   "source": [
+    "Diabetes = np.sum(covid_df['DIABETES'] == 1)\n",
+    "print(\"The number of people who died from Covid AND had diabetes: \", Diabetes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "75416d9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of people who died from Covid AND had COPD or Chronic obstructive pulmonary disease:  1723\n"
+     ]
+    }
+   ],
+   "source": [
+    "COPD = np.sum(covid_df['COPD'] == 1)\n",
+    "print(\"The number of people who died from Covid AND had COPD or Chronic obstructive pulmonary disease: \", COPD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e84f5d8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of people who died from Covid AND had asthma: \n"
+     ]
+    }
+   ],
+   "source": [
+    "Asthma = np.sum(covid_df['ASTHMA'] == 1)\n",
+    "print(\"The number of people who died from Covid AND had asthma: \", Asthma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "94fac91f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of people who died from Covid AND was immunocompromised:  1122\n"
+     ]
+    }
+   ],
+   "source": [
+    "Immunocompromised = np.sum(covid_df['INMSUPR'] == 1)\n",
+    "print(\"The number of people who died from Covid AND was immunocompromised: \", Immunocompromised)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9e5294d",
+   "id": "ec4a9d8b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "HIPERTENSION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "460e125c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CARDIOVASCULAR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5902e83c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OBESITY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc6e5120",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RENAL_CHRONIC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51795cc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TOBACCO "
+   ]
   }
  ],
  "metadata": {
