additional US CDC data analysis

--- a/data_analysis/COVID_data_analysis.ipynb
+++ b/data_analysis/COVID_data_analysis.ipynb
@@ -2812,9 +2812,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlen",
+   "display_name": "mlenv",
    "language": "python",
-   "name": "mlen"
+   "name": "mlenv"
   },
   "language_info": {
    "codemirror_mode": {
